--- a/index.html
+++ b/index.html
@@ -1,7 +1,43 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <!--favicon -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <!-- end favicon -->
+  </head>
+  <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+<!-- include ar.js for A-Frame -->
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
+
+<body style='margin : 0px; overflow: hidden;'>
+  
+  <a-scene embedded arjs>
+    <!-- create your content here. just a box for now -->
+    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <!-- define a camera which will move according to the marker position -->
+    
+    <a-marker-camera preset='hiro'></a-marker-camera>
+  </a-scene>
+      <script src="https://cdn.jsdelivr.net/npm/fas-js/lib/bundle.js"></script>
+
+    <script type="module" >
+      
+import {App} from '../javascripts/App.js';
+
+document.addEventListener("DOMContentLoaded", function(){
+    const webAR_app=  new App();
+    window.app = webAR_app;
+    console.log("App loaded");
+});
+    </script>
+
+
+  </body>
 </html>
